--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "history": "^4.10.1",
+    "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "swiper": "^7.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
