--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "history": "^4.10.1",
+    "leaflet": "^1.7.1",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": ">=3.1.0 <3.2.0 || ^3.2.1",
+    "@react-leaflet/core": ">=1.0.0 <1.1.0 || ^1.1.1",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -34,19 +37,13 @@
       "htmlacademy/react"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^11.2.0",
     "@testing-library/react-hooks": "^5.1.0",
