--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-leaflet/core": ">=1.0.0 <1.1.0 || ^1.1.1",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
@@ -12,8 +13,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
     "react-leaflet": ">=3.1.0 <3.2.0 || ^3.2.1",
-    "@react-leaflet/core": ">=1.0.0 <1.1.0 || ^1.1.1",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
